test(user/infrastructture): add session manager validation to user tests